# Network_Identity-NXD

./: .replit  API_SECRETS_SETUP.md  Dockerfile  README.md  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  replit.md
attached_assets/: Advanced Features (Missing)-_1751497948208.txt  Pasted--NXD-Ecosystem-Market-Strategy-Report-1-Market-Overview-Web3-Identity-Naming-and-Cloud-1751610149615_1751610149628.txt  Pasted--Platform-Revenue-Distribution-Revenue-Sources-Domain-registrations-TLD-cr-1751562946271_1751562946281.txt  Pasted-Below-is-a-comprehensive-cost-analysis-for-hosting-the-NXD-Platform-s-Web3-communication--1751501005216_1751501005222.txt  Pasted-I-ll-create-a-comprehensive-React-TypeScript-application-with-multiple-color-variants-flat-icon-ver-1751798448578_1751798448593.txt  Pasted-Thank-you-for-the-request-to-consolidate-and-refine-the-NXD-Token-smart-contract-ecosystem-desig-1751612124913_1751612124918.txt  Pasted-Thank-you-for-the-request-to-review-and-combine-the-Market-Analysis-SWOT-Analysis-and-To-1751609073952_1751609073966.txt  Pasted-What-s-Missing-from-Attached-Assets-Based-on-the-comprehensive-design-documents-in-your-attached-ass-1751560129576_1751560129581.txt  Pasted-https-docs-metamask-io-sdk-https-console-circle-com-home-https-docs-cdp-coinbase-com-get-st-1751619658883_1751619658886.txt  Pasted-import-React-useState-useEffect-useRef-useCallback-from-react-import-Camera-Download--1751621855583_1751621855593.txt  README (2)_1751495567885.md  (+1 more)
rust-components/: Cargo.toml
rust-components/src/: domain_scorer.rs  lib.rs
(+85 files in other folders)
