[package]
name = "nxd-rust-components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]